--- a/3.html
+++ b/3.html
@@ -14,7 +14,7 @@
         </ol>
     
     
-        <h2>javaScript이란 무엇인가?</h2>
+        <h2>javaScript이란 무엇인가? 수정</h2>
         강력한 '우승 후보' 브라질이 크로아티아와 <a href="https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&query=%EB%B8%8C%EB%9D%BC%EC%A7%88+%EB%84%A4%EC%9D%B4%EB%A7%88%EB%A5%B4&oquery=%EB%B8%8C%EB%9D%BC%EC%A7%88&tqi=hHRqWdp0J1ZssKJ6uGZssssssr0-490059" target="_blank" title="brazil">승부차기</a>에서 패하며 2022 카타르 월드컵 8강에서 탈락했다.
         브라질은 10일(한국시간) 카타르 알라이얀의 에듀케이션 시티 스타디움에서 열린 크로아티아와 2022 카타르 월드컵 8강전에서 연장전까지 1-1로 비긴 끝에 승부차기에서 2-4로 패했다.
         한국을 4-1로 제압한 16강전과 달리 <strong><u>브라질은 크로아티아를</u> 상대로 내내 고전했다.</strong><br><br><br>
