--- a/1.html
+++ b/1.html
@@ -25,6 +25,26 @@
         <p style="margin-top:40px">전반 슈팅 개수에서 브라질이 5(유효 슛 3)-3(유효 슛 0)으로 우위를 점했으나, 크로아티아가 강한 전방 압박과 촘촘한 수비로 맞서면서 팽팽한 흐름이 이어졌다.
             크로아티아는 전반 13분 마리오 파샬리치(아탈란타)가 오른쪽 측면에서 올린 크로스에 이반 페리시치(토트넘)가 오른발을 가져다 댄 게 빗맞아 마무리를 짓지 못한 게 아쉬웠다.
         </p>
+
+        <div id="disqus_thread"></div>
+        <script>
+            /**
+            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+            /*
+            var disqus_config = function () {
+            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            */
+            (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://web1-njxvxav6oy.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </body>
     
 </html>
